main.css
* {
    box-sizing: border-box;
    scroll-behavior: smooth;
  }

body {
    font-family: 'Hind', sans-serif;  
    font-size: calc(.95em + 1vw);
    background-color:#eef5fa;
    color: #3A434A;
    text-align: center;
    line-height: 1.5;
}
nav {
    padding: 1% 0;
    background-color: #3A434A;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    z-index: 10;
    max-height: 90px;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

img {
    width: 70%;
    height: auto;
}

h1 {
    font-size: calc(3em + 1vw);
}

h2 {
    font-size: calc(2em + 1vw);
}

h3 {
    font-size: calc(1.5em + 1vw);
}
.tech-logo {
    width: 6%;
}

.tech-skills-list {
    padding: 0px;
    height: auto;
}

#Main-img, #Headshot {
    width: 50%;
    height: auto;
}

#Headshot {
    border-radius: 50%;
}

p, footer {
    margin-left: 20%;
    margin-right: 20%;
}

li {
    list-style-type: none;
}
  
.project {
    display: flex;
    padding: 0;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.nav-link {
    color: #e8f6ff;
    text-decoration: none;
}

.nav-link:hover {
    color: #9bc5e0;
}

.nav-list {
    width: 100%;
    display: flex;
    justify-content: space-evenly;
    align-items: space-evenly;
    margin: 0;
    padding: 0px;
}

.source-links {
    display: flex;
    width: 20%;
    height: auto;
}

.live-code, .source-code {
    width: 70%;
}

.nav-tabs {

}


.project-links {
    width: 75%;
    
}
.project-links, footer {
    display: flex;
    justify-content: space-evenly;
}


.logo-img {
    width: 25%;
    height: auto;
}

.logo-item {
    display: flex;
    align-items: center;
}

#GitHub-Logo {
    width: 100%;
}

#TravelImg {
    border-radius: 5%;
}

.logo-img:hover, .live-code:hover, .source-code:hover {
    opacity: 0.3;
}

.logo-img, .live-code, .source-code {
    mix-blend-mode: multiply;
}


@media only screen and (min-width: 768px) {
    #About-Me-container {
        display: flex;
        position: relative;
        align-items: center;
    }
    #Headshot {
        border-radius: 10%;
        height: 40%;
    }
}

